# Agent-more

LangGraph-CLI/: .env.example  .gitignore  README.md  pyproject.toml  verify.sh
LangGraph-CLI/config/: agents.yml  workflows.yml
LangGraph-CLI/content_lg/: __init__.py  __main__.py  cli.py  config.py  payload.py  runner.py
LangGraph-CLI/content_lg/engine/: __init__.py  mock.py
LangGraph-CLI/content_lg/utils/: errors.py  logger.py
LangGraph-CLI/guide/: architecture.md  geoflow-contract.md
LangGraph-CLI/tests/: test_payload.py
multi-agent/: .env.example  .gitignore  README.md  SKILL.md  config.yaml.example  pyproject.toml  start.sh  stop.sh  verify.sh
multi-agent/.cursor/plans/: multi-agent_产品设计_d286fe2d.plan.md
multi-agent/.cursor/rules/: agent-background-services.mdc
multi-agent/agent/: manifest.json
multi-agent/apps/web/: app.py  launchd-run.sh
multi-agent/guide/: CLI与标准对齐说明.md  产品定位与模式映射.md  架构总览.md
multi-agent/multi_agent/: __init__.py  cli.py  config.py  context.py  coordinator.py  sdk.py  selector.py
multi-agent/multi_agent/cli_cmds/: __init__.py  common.py  doctor.py  knowledge.py  pack.py  role.py  skill.py
multi-agent/multi_agent/knowledge/: __init__.py  catalog.yml
multi-agent/multi_agent/llm/: __init__.py
multi-agent/multi_agent/modes/: __init__.py
multi-agent/multi_agent/roles/: __init__.py  content.yml  growth_hacker.yml  market.yml  moderator.yml  scene.yml  simplifier.yml  strategist.yml  tech.yml  tech_hardcore.yml
multi-agent/scripts/: start.sh  stop.sh
multi-agent/tests/: test_cli_resources.py  test_modes_demo.py
(+372 files in other folders)
